# ai-projects

./: .gitignore  LICENSE
n8n-check-links-sample/: Readme.md
n8n-check-links-sample/.docker/: docker-compose.yml
n8n-check-links-sample/data/: links-to-watch.txt
n8n-check-links-sample/template/: Status_SItes.json
notion-mcp-server-sample/: .env.example  .gitignore  LICENSE  README.md  mcp-config.json  pyproject.toml  requirements.txt  run.sh  setup.sh  test_notion.py
notion-mcp-server-sample/docs/: IMPLEMENTATION.md  MCP_CLIENT_GUIDE.md
notion-mcp-server-sample/src/: __init__.py  config.py  main.py  server.py
notion-mcp-server-sample/src/tools/: __init__.py  notion_tools.py
